--- a/src/sparamviewer_pygubu.ui
+++ b/src/sparamviewer_pygubu.ui
@@ -77,7 +77,7 @@
                         <child>
                           <object class="ttk.Combobox" id="combobox_mode">
                             <property name="state">readonly</property>
-                            <bind sequence="&lt;&lt;ComboboxSelected&gt;&gt;" handler="on_select_plotmode" add="" />
+                            <bind add="" handler="on_select_plotmode" sequence="&lt;&lt;ComboboxSelected&gt;&gt;" />
                             <layout manager="pack">
                               <property name="expand">true</property>
                               <property name="fill">x</property>
@@ -88,7 +88,7 @@
                         <child>
                           <object class="ttk.Combobox" id="combobox_unit">
                             <property name="state">readonly</property>
-                            <bind sequence="&lt;&lt;ComboboxSelected&gt;&gt;" handler="on_select_plotmode" add="" />
+                            <bind add="" handler="on_select_plotmode" sequence="&lt;&lt;ComboboxSelected&gt;&gt;" />
                             <layout manager="pack">
                               <property name="padx">5</property>
                               <property name="side">right</property>
@@ -111,7 +111,7 @@
                           <object class="ttk.Notebook" id="notebook_mode">
                             <property name="height">200</property>
                             <property name="width">200</property>
-                            <bind sequence="&lt;&lt;NotebookTabChanged&gt;&gt;" handler="on_tab_change" add="" />
+                            <bind add="" handler="on_tab_change" sequence="&lt;&lt;NotebookTabChanged&gt;&gt;" />
                             <layout manager="pack">
                               <property name="expand">true</property>
                               <property name="fill">both</property>
@@ -152,7 +152,7 @@
                                             <child>
                                               <object class="ttk.Treeview" id="treeview_files">
                                                 <property name="selectmode">extended</property>
-                                                <bind sequence="&lt;&lt;TreeviewSelect&gt;&gt;" handler="on_select_file" add="" />
+                                                <bind add="" handler="on_select_file" sequence="&lt;&lt;TreeviewSelect&gt;&gt;" />
                                                 <layout manager="pack">
                                                   <property name="expand">true</property>
                                                   <property name="fill">both</property>
@@ -189,9 +189,9 @@
                                         </layout>
                                         <child>
                                           <object class="ttk.Button" id="button_gen">
-                                            <property name="command" cbtype="simple" type="command">on_use_expr</property>
+                                            <property cbtype="simple" name="command" type="command">on_use_expr</property>
                                             <property name="text" translatable="yes">Plot (F5)</property>
-                                            <bind sequence="&lt;1&gt;" handler="callback" add="" />
+                                            <bind add="" handler="callback" sequence="&lt;1&gt;" />
                                             <layout manager="pack">
                                               <property name="fill">x</property>
                                               <property name="side">top</property>
@@ -200,7 +200,7 @@
                                         </child>
                                         <child>
                                           <object class="ttk.Button" id="button1">
-                                            <property name="command" cbtype="simple" type="command">on_gen_expr</property>
+                                            <property cbtype="simple" name="command" type="command">on_gen_expr</property>
                                             <property name="text" translatable="yes">Generate</property>
                                             <layout manager="pack">
                                               <property name="fill">x</property>
@@ -211,7 +211,7 @@
                                         </child>
                                         <child>
                                           <object class="ttk.Button" id="button_expr_help">
-                                            <property name="command" cbtype="simple" type="command">on_expr_help</property>
+                                            <property cbtype="simple" name="command" type="command">on_expr_help</property>
                                             <property name="text" translatable="yes">Help</property>
                                             <layout manager="pack">
                                               <property name="pady">10</property>
@@ -294,14 +294,14 @@
                 <child>
                   <object class="tk.Menuitem.Command" id="command_1">
                     <property name="accelerator">Ctrl+O</property>
-                    <property name="command" cbtype="simple" type="command">on_open_dir</property>
+                    <property cbtype="simple" name="command" type="command">on_open_dir</property>
                     <property name="label" translatable="yes">Open Directory...</property>
                   </object>
                 </child>
                 <child>
                   <object class="tk.Menuitem.Command" id="command_2">
                     <property name="accelerator">Ctrl+F5</property>
-                    <property name="command" cbtype="simple" type="command">on_reload_dir</property>
+                    <property cbtype="simple" name="command" type="command">on_reload_dir</property>
                     <property name="label" translatable="yes">Reload Directory</property>
                   </object>
                 </child>
@@ -311,7 +311,7 @@
                 <child>
                   <object class="tk.Menuitem.Command" id="command_export">
                     <property name="accelerator">Ctrl+E</property>
-                    <property name="command" cbtype="simple" type="command">on_export</property>
+                    <property cbtype="simple" name="command" type="command">on_export</property>
                     <property name="label" translatable="yes">Export Trace Data...</property>
                   </object>
                 </child>
@@ -321,7 +321,7 @@
                 <child>
                   <object class="tk.Menuitem.Command" id="command_info">
                     <property name="accelerator">F1</property>
-                    <property name="command" cbtype="simple" type="command">on_click_info</property>
+                    <property cbtype="simple" name="command" type="command">on_click_info</property>
                     <property name="label" translatable="yes">File Info...</property>
                   </object>
                 </child>
@@ -331,14 +331,14 @@
                 <child>
                   <object class="tk.Menuitem.Command" id="command_loadexpr">
                     <property name="accelerator">Ctrl+L</property>
-                    <property name="command" cbtype="simple" type="command">on_load_expr</property>
+                    <property cbtype="simple" name="command" type="command">on_load_expr</property>
                     <property name="label" translatable="yes">Load Expressions...</property>
                   </object>
                 </child>
                 <child>
                   <object class="tk.Menuitem.Command" id="command_saveexpr">
                     <property name="accelerator">Ctrl+S</property>
-                    <property name="command" cbtype="simple" type="command">on_save_expr</property>
+                    <property cbtype="simple" name="command" type="command">on_save_expr</property>
                     <property name="label" translatable="yes">Save Expressions...</property>
                   </object>
                 </child>
@@ -347,7 +347,7 @@
                 </child>
                 <child>
                   <object class="tk.Menuitem.Command" id="command_exit">
-                    <property name="command" cbtype="simple" type="command">on_exit_cmd</property>
+                    <property cbtype="simple" name="command" type="command">on_exit_cmd</property>
                     <property name="label" translatable="yes">Exit</property>
                   </object>
                 </child>
@@ -358,7 +358,7 @@
                 <property name="label" translatable="yes">Plot</property>
                 <child>
                   <object class="tk.Menuitem.Checkbutton" id="checkbutton_showlegend">
-                    <property name="command" cbtype="simple" type="command">on_show_legend</property>
+                    <property cbtype="simple" name="command" type="command">on_show_legend</property>
                     <property name="label" translatable="yes">Show Legend</property>
                     <property name="offvalue">0</property>
                     <property name="onvalue">1</property>
@@ -367,7 +367,7 @@
                 </child>
                 <child>
                   <object class="tk.Menuitem.Checkbutton" id="checkbutton_alwaysnames">
-                    <property name="command" cbtype="simple" type="command">on_show_names_always</property>
+                    <property cbtype="simple" name="command" type="command">on_show_names_always</property>
                     <property name="label" translatable="yes">Always Show Names</property>
                     <property name="offvalue">0</property>
                     <property name="onvalue">1</property>
@@ -379,7 +379,7 @@
                 </child>
                 <child>
                   <object class="tk.Menuitem.Checkbutton" id="checkbutton_logf">
-                    <property name="command" cbtype="simple" type="command">on_change_logf</property>
+                    <property cbtype="simple" name="command" type="command">on_change_logf</property>
                     <property name="label" translatable="yes">Logarithmic Frequency</property>
                     <property name="offvalue">0</property>
                     <property name="onvalue">1</property>
@@ -387,8 +387,11 @@
                   </object>
                 </child>
                 <child>
+                  <object class="tk.Menuitem.Separator" id="separator_5" />
+                </child>
+                <child>
                   <object class="tk.Menuitem.Checkbutton" id="checkbutton_1">
-                    <property name="command" cbtype="simple" type="command">on_lock_xaxis</property>
+                    <property cbtype="simple" name="command" type="command">on_lock_xaxis</property>
                     <property name="label" translatable="yes">Lock X-Axis</property>
                     <property name="offvalue">0</property>
                     <property name="onvalue">1</property>
@@ -397,7 +400,7 @@
                 </child>
                 <child>
                   <object class="tk.Menuitem.Checkbutton" id="checkbutton_2">
-                    <property name="command" cbtype="simple" type="command">on_lock_yaxis</property>
+                    <property cbtype="simple" name="command" type="command">on_lock_yaxis</property>
                     <property name="label" translatable="yes">Lock Y-Axis</property>
                     <property name="offvalue">0</property>
                     <property name="onvalue">1</property>
@@ -406,7 +409,7 @@
                 </child>
                 <child>
                   <object class="tk.Menuitem.Command" id="command_5">
-                    <property name="command" cbtype="simple" type="command">on_rescale_locked_axes</property>
+                    <property cbtype="simple" name="command" type="command">on_rescale_locked_axes</property>
                     <property name="label" translatable="yes">Re-Scale </property>
                   </object>
                 </child>
@@ -416,7 +419,7 @@
                 <child>
                   <object class="tk.Menuitem.Command" id="command_plot_expr">
                     <property name="accelerator">F5</property>
-                    <property name="command" cbtype="simple" type="command">on_use_expr</property>
+                    <property cbtype="simple" name="command" type="command">on_use_expr</property>
                     <property name="label" translatable="yes">Update Plot From Expressions</property>
                   </object>
                 </child>
@@ -425,7 +428,7 @@
                 </child>
                 <child>
                   <object class="tk.Menuitem.Command" id="command_kaiser">
-                    <property name="command" cbtype="simple" type="command">on_set_kaiser</property>
+                    <property cbtype="simple" name="command" type="command">on_set_kaiser</property>
                     <property name="label" translatable="yes">TD Kaiser Argument...</property>
                   </object>
                 </child>
@@ -437,13 +440,13 @@
                 <child>
                   <object class="tk.Menuitem.Command" id="command_cursors">
                     <property name="accelerator">F3</property>
-                    <property name="command" cbtype="simple" type="command">on_cursor_cmd</property>
+                    <property cbtype="simple" name="command" type="command">on_cursor_cmd</property>
                     <property name="label" translatable="yes">Trace Cursors</property>
                   </object>
                 </child>
                 <child>
                   <object class="tk.Menuitem.Command" id="command_3">
-                    <property name="command" cbtype="simple" type="command">on_call_optrlcalc</property>
+                    <property cbtype="simple" name="command" type="command">on_call_optrlcalc</property>
                     <property name="label" translatable="yes">Optimum RL Calculator</property>
                   </object>
                 </child>
@@ -455,7 +458,7 @@
                 <property name="tearoff">false</property>
                 <child>
                   <object class="tk.Menuitem.Command" id="command_4">
-                    <property name="command" cbtype="simple" type="command">on_menu_about</property>
+                    <property cbtype="simple" name="command" type="command">on_menu_about</property>
                     <property name="label" translatable="yes">About</property>
                   </object>
                 </child>
@@ -534,7 +537,7 @@
             <child>
               <object class="ttk.Combobox" id="combobox_files">
                 <property name="state">readonly</property>
-                <bind sequence="&lt;&lt;ComboboxSelected&gt;&gt;" handler="on_change" add="" />
+                <bind add="" handler="on_change" sequence="&lt;&lt;ComboboxSelected&gt;&gt;" />
                 <layout manager="pack">
                   <property name="expand">true</property>
                   <property name="fill">x</property>
@@ -729,7 +732,7 @@
             <child>
               <object class="ttk.Combobox" id="combobox_c1">
                 <property name="state">readonly</property>
-                <bind sequence="&lt;&lt;ComboboxSelected&gt;&gt;" handler="on_sel_trace1" add="" />
+                <bind add="" handler="on_sel_trace1" sequence="&lt;&lt;ComboboxSelected&gt;&gt;" />
                 <layout manager="grid">
                   <property name="column">1</property>
                   <property name="row">0</property>
@@ -739,7 +742,7 @@
             <child>
               <object class="ttk.Combobox" id="combobox_c2">
                 <property name="state">readonly</property>
-                <bind sequence="&lt;&lt;ComboboxSelected&gt;&gt;" handler="on_sel_trace2" add="" />
+                <bind add="" handler="on_sel_trace2" sequence="&lt;&lt;ComboboxSelected&gt;&gt;" />
                 <layout manager="grid">
                   <property name="column">1</property>
                   <property name="row">1</property>
@@ -748,7 +751,7 @@
             </child>
             <child>
               <object class="ttk.Checkbutton" id="checkbutton_auto_cursor">
-                <property name="command" cbtype="simple" type="command">on_auto_cursor</property>
+                <property cbtype="simple" name="command" type="command">on_auto_cursor</property>
                 <property name="offvalue">manual</property>
                 <property name="onvalue">auto</property>
                 <property name="text" translatable="yes">Auto</property>
@@ -761,7 +764,7 @@
             </child>
             <child>
               <object class="ttk.Checkbutton" id="checkbutton_auto_trace">
-                <property name="command" cbtype="simple" type="command">on_auto_trace</property>
+                <property cbtype="simple" name="command" type="command">on_auto_trace</property>
                 <property name="offvalue">manual</property>
                 <property name="onvalue">auto</property>
                 <property name="text" translatable="yes">Auto</property>
@@ -774,7 +777,7 @@
             </child>
             <child>
               <object class="ttk.Radiobutton" id="radiobutton_c1">
-                <property name="command" cbtype="simple" type="command">on_sel_cursor1</property>
+                <property cbtype="simple" name="command" type="command">on_sel_cursor1</property>
                 <property name="text" translatable="yes">Cursor 1</property>
                 <property name="value">cursor_1</property>
                 <property name="variable">string:var_selected_cursor</property>
@@ -786,7 +789,7 @@
             </child>
             <child>
               <object class="ttk.Radiobutton" id="radiobutton_c2">
-                <property name="command" cbtype="simple" type="command">on_sel_cursor2</property>
+                <property cbtype="simple" name="command" type="command">on_sel_cursor2</property>
                 <property name="text" translatable="yes">Cursor 2</property>
                 <property name="value">cursor_2</property>
                 <property name="variable">string:var_selected_cursor</property>
