--- a/src/gui/pygubu.ui
+++ b/src/gui/pygubu.ui
@@ -470,15 +470,6 @@
                     <property name="label" translatable="yes">Update Plot From Expressions</property>
                   </object>
                 </child>
-                <child>
-                  <object class="tk.Menuitem.Separator" id="separator2" />
-                </child>
-                <child>
-                  <object class="tk.Menuitem.Command" id="command_kaiser">
-                    <property name="command" cbtype="simple" type="command">on_set_kaiser</property>
-                    <property name="label" translatable="yes">TD Kaiser Argument...</property>
-                  </object>
-                </child>
               </object>
             </child>
             <child>
@@ -504,6 +495,15 @@
                   <object class="tk.Menuitem.Command" id="command_6">
                     <property name="command" cbtype="simple" type="command">on_show_error_log_click</property>
                     <property name="label" translatable="yes">Error Log</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="tk.Menuitem.Separator" id="separator_8" />
+                </child>
+                <child>
+                  <object class="tk.Menuitem.Command" id="command_9">
+                    <property name="command" type="command" cbtype="simple">on_open_settings_click</property>
+                    <property name="label" translatable="yes">Settings</property>
                   </object>
                 </child>
               </object>
@@ -977,6 +977,126 @@
             <layout manager="pack">
               <property name="side">right</property>
             </layout>
+          </object>
+        </child>
+      </object>
+    </child>
+  </object>
+  <object class="tk.Toplevel" id="toplevel_settings" named="True">
+    <property name="height">200</property>
+    <property name="title" translatable="yes">Settings</property>
+    <property name="width">200</property>
+    <child>
+      <object class="ttk.Frame" id="frame_13">
+        <property name="height">200</property>
+        <property name="padding">10</property>
+        <property name="width">200</property>
+        <layout manager="pack" />
+        <child>
+          <object class="ttk.Labelframe" id="labelframe_5">
+            <property name="height">200</property>
+            <property name="padding">5</property>
+            <property name="text" translatable="yes">Time-Domain Transform</property>
+            <property name="width">200</property>
+            <layout manager="pack">
+              <property name="ipadx">5</property>
+              <property name="ipady">5</property>
+              <property name="padx">5</property>
+              <property name="pady">5</property>
+              <property name="side">top</property>
+            </layout>
+            <child>
+              <object class="ttk.Label" id="label_6">
+                <property name="text" translatable="yes">Window:</property>
+                <layout manager="grid">
+                  <property name="column">0</property>
+                  <property name="row">0</property>
+                  <property name="sticky">w</property>
+                </layout>
+              </object>
+            </child>
+            <child>
+              <object class="ttk.Combobox" id="combobox_window" named="True">
+                <bind sequence="&lt;&lt;ComboboxSelected&gt;&gt;" handler="on_win_sel" add="" />
+                <layout manager="grid">
+                  <property name="column">1</property>
+                  <property name="padx">5</property>
+                  <property name="pady">3</property>
+                  <property name="row">0</property>
+                  <property name="sticky">w</property>
+                </layout>
+              </object>
+            </child>
+            <child>
+              <object class="ttk.Label" id="label_7">
+                <property name="text" translatable="yes">Parameter:</property>
+                <layout manager="grid">
+                  <property name="column">0</property>
+                  <property name="row">1</property>
+                  <property name="sticky">w</property>
+                </layout>
+              </object>
+            </child>
+            <child>
+              <object class="ttk.Label" id="label_8">
+                <property name="text" translatable="yes">Shift:</property>
+                <layout manager="grid">
+                  <property name="column">0</property>
+                  <property name="row">2</property>
+                  <property name="sticky">w</property>
+                </layout>
+              </object>
+            </child>
+            <child>
+              <object class="ttk.Frame" id="frame_12">
+                <property name="height">200</property>
+                <property name="width">200</property>
+                <layout manager="grid">
+                  <property name="column">1</property>
+                  <property name="row">2</property>
+                </layout>
+                <child>
+                  <object class="ttk.Spinbox" id="spinbox_2">
+                    <property name="from_">-10000</property>
+                    <property name="increment">10</property>
+                    <property name="textvariable">double:shift_ps</property>
+                    <property name="to">10000</property>
+                    <bind sequence="&lt;&lt;Decrement&gt;&gt;" handler="on_change_shift" add="" />
+                    <bind sequence="&lt;&lt;Increment&gt;&gt;" handler="on_change_shift" add="" />
+                    <layout manager="pack">
+                      <property name="padx">5</property>
+                      <property name="pady">3</property>
+                      <property name="side">left</property>
+                    </layout>
+                  </object>
+                </child>
+                <child>
+                  <object class="ttk.Label" id="label_10">
+                    <property name="text" translatable="yes">ps</property>
+                    <layout manager="pack">
+                      <property name="side">top</property>
+                    </layout>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="ttk.Spinbox" id="spinbox_3">
+                <property name="from_">0</property>
+                <property name="increment">0.1</property>
+                <property name="textvariable">double:win_param</property>
+                <property name="to">1000</property>
+                <bind sequence="&lt;&lt;Decrement&gt;&gt;" handler="on_change_arg" add="" />
+                <bind sequence="&lt;&lt;Increment&gt;&gt;" handler="on_change_arg" add="" />
+                <layout manager="grid">
+                  <property name="column">1</property>
+                  <property name="padx">5</property>
+                  <property name="pady">3</property>
+                  <property name="row">1</property>
+                  <property name="sticky">w</property>
+                </layout>
+              </object>
+            </child>
           </object>
         </child>
       </object>
